// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion component renders li empty given no section props 1`] = `
<div>
  <ul>
    <h1>
      Sections: 
    </h1>
  </ul>
</div>
`;

exports[`Accordion component renders no sections by default 1`] = `
<div>
  <ul>
    <h1>
      Sections: 
    </h1>
  </ul>
</div>
`;

exports[`Accordion component renders only the last clicked when multiple sections are clicked 1`] = `
<div>
  <ul>
    <h1>
      Sections: 
    </h1>
    <li
      key="0"
    >
      <button
        onClick={[Function]}
      >
        Section 1
      </button>
    </li>
    <li
      key="1"
    >
      <button
        onClick={[Function]}
      >
        Section 2
      </button>
      <p>
        Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
      </p>
    </li>
    <li
      key="2"
    >
      <button
        onClick={[Function]}
      >
        Section 3
      </button>
    </li>
  </ul>
</div>
`;
